[tool.poetry]
name = "clarite"
version = "2.0.0"
description = "CLeaning to Analysis: Reproducibility-based Interface for Traits and Exposures"
authors = ["Hall Lab <mah546@psu.edu>"]
license = "BSD-3-Clause"
readme = "README.rst"
repository = "https://github.com/HallLab/clarite-python/"
documentation = "https://clarite-python.readthedocs.io/en/latest/"
classifiers=[
        "Development Status :: 4 - Beta",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Programming Language :: Python :: 3",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
    ]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
click = ">7"
pandas = ">1.1"
scipy = ">1.5"
seaborn = ">0.9"
statsmodels = ">0.10"
matplotlib = "^3.4.2"
numpy = "^1.21.0"
rpy2 = "^3.4.5"
tzlocal = "^2.1"
sphinx = {version = "^3.2.1", optional = true}
numpydoc = {version = "^1.1.0", optional = true}
sphinx_rtd_theme = {version = "^0.5.0", optional = true}
sphinx-copybutton = {version = "^0.3.0", optional = true}
ipython = {version = "^7.18.1", optional = true}
sphinx-click = {version = "^2.6", optional = true}
importlib-metadata = {version = "^2.0", python = "<3.8"}
pandas-genomics = "^0.8.0"

[tool.poetry.dev-dependencies]
codecov = "^2.1.11"
coverage = "^5.5"
flake8 = "^3.9.2"
pytest = ">=4.6"
pytest-cov = "^2.12.1"
pytest-xdist = "^2.3.0"
black = "^21.6b0"

[tool.poetry.extras]
docs = ["sphinx", "numpydoc", "sphinx_rtd_theme", "sphinx-copybutton", "ipython", "sphinx-click"]

[tool.poetry.scripts]
clarite-cli = 'clarite.cli:entry_point'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
