[tool.poetry]
name = "clarite"
version = "2.4.1"
description = "CLeaning to Analysis: Reproducibility-based Interface for Traits and Exposures"
authors = ["Andre Rico <andreluis.rico@pennmedicine.upenn.edu>"]
license = "BSD-3-Clause"
readme = "README.rst"
repository = "https://github.com/HallLab/clarite-python/"
documentation = "https://clarite-python.readthedocs.io/en/latest/"
classifiers=[
        "Development Status :: 4 - Beta",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Programming Language :: Python :: 3",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
    ]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
click = ">7"
pandas = ">=2.2,<3.0"
scipy = "^1.9"
seaborn = ">0.9"
statsmodels = "^0.14"
matplotlib = "^3.4.2"
numpy = ">=1.24,<2.0"
tzlocal = "^2.1"
numpydoc = {version = "^1.1.0", optional = true}
ipython = {version = "^8.24", optional = true}
pandas-genomics = "^1.0.0"
rpy2 = "^3.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
tox = "^4.26.0"
pytest = "^7.2"
codecov = "^2.1.11"
coverage = "^5.5"
flake8 = "^6"
pytest-cov = "^2.12.1"
pytest-xdist = "^2.3.0"
black = ">=22"
sphinx = {version = "^4.0.0", optional = true}
sphinx-click = {version = "^4", optional = true}
sphinx_rtd_theme = {version = "^0.5.0", optional = true}
sphinx-copybutton = {version = "^0.3.0", optional = true}

[tool.poetry.extras]
docs = ["sphinx", "numpydoc", "sphinx_rtd_theme", "sphinx-copybutton", "ipython", "sphinx-click"]

[tool.poetry.scripts]
clarite-cli = 'clarite.cli:entry_point'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = true